<resources>
    <string name="app_name">Music App</string>
    <string name="play">Play</string>
    <string name="previous">Previous</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="playlists">Playlists</string>
    <string name="option">Option</string>
    <string name="song">song</string>
    <string name="artist">Artist</string>
    <string name="can_you_feel_it">Can You Feel It - Single Version</string>
    <string name="the_jacksons">The Jacksons</string>
    <string name="hottest_christmas_on_record">Hottest Christmas on Record</string>
    <string name="bob_alloy">Bop Alloy, Substantial, Marcus D</string>
    <string name="down_the_road">Down the Road</string>
    <string name="chuggin_edits">Chuggin Edits</string>
    <string name="no_money_no_problems"><![CDATA[No Money No Problems (feat. Mase & Puff Daddy)]]></string>
    <string name="big_daddy"><![CDATA[The Notorious B.I.G., Mase & Puff Daddy]]></string>
    <string name="white_christmas">White Christmas</string>
    <string name="the_drifters">The Drifters, Clyde McPhatter, Bill Pinckney</string>
    <string name="wild_thing">Wild Thing</string>
    <string name="do_your_thing">Do Your Thing</string>
    <string name="rapper_delight">Rapper\'s Delight - Single Version</string>
    <string name="a_fifth_of_beethoven">A Fifth Of Beethoven -  Saturday Night Fever</string>
    <string name="the_christmas_song">The Christmas Song</string>
    <string name="i_ve_got_a_women">I\'ve Got A Woman</string>
    <string name="i_know_you_got_soul">I Know You Got Soul - The Double Trouble Remix</string>
    <string name="september">September</string>
    <string name="just_an_other_christmas_song">Just Another Christmas Song</string>
    <string name="i_wish">I Wish - Radio Edit</string>
    <string name="jungle_boogie">Jungle Boogie</string>
    <string name="christmas_in_hollies">Christmas In Hollis</string>
    <string name="appache">Apache</string>
    <string name="that_the_way">That\'s the Way (I Like It)</string>
    <string name="jingle_bells">Jingle Bells</string>
    <string name="show_the_world">Show the World</string>
    <string name="let_go_round_again">Let\'s Go Round Again</string>
    <string name="oh_yeah">Oh Yeah</string>
    <string name="sir_duke">Sir Duke</string>
    <string name="nothing_from_nothing">Nothing From Nothing</string>
    <string name="night_fever">Night Fever</string>
    <string name="im_coming_out">I\'m Coming Out</string>
    <string name="tone_loc">Tone-Loc</string>
    <string name="basement_jaxx">Basement Jaxx</string>
    <string name="the_sugarhill_gang">The Sugarhill Gang</string>
    <string name="walther_murphy">Walter Murphy</string>
    <string name="james_brown">James Brown</string>
    <string name="ray_charles">Ray Charles</string>
    <string name="eric_rakim_norman"><![CDATA[Eric B. & Rakim, Norman Cook]]></string>
    <string name="earth_wind_fire"><![CDATA[Earth, Wind & Fire]]></string>
    <string name="sharon_dap_kings"><![CDATA[Sharon Jones & The Dap-Kings]]></string>
    <string name="skeelo">Skee-Lo</string>
    <string name="kool_and_the_gang"><![CDATA[Kool & The Gang]]></string>
    <string name="dmc">Run–D.M.C.</string>
    <string name="bongo_band">Incredible Bongo Band</string>
    <string name="sunshine_band"><![CDATA[KC & The Sunshine Band]]></string>
    <string name="soulful_string">The Soulful Strings</string>
    <string name="sees">SeeS</string>
    <string name="white_band">Average White Band</string>
    <string name="ungly_duckling">Ugly Duckling</string>
    <string name="stevie_wonder">Stevie Wonder</string>
    <string name="billy_preston">Billy Preston</string>
    <string name="bee_gees">Bee Gees</string>
    <string name="diana_ross">Diana Ross</string>
</resources>
