<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90CAF9"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/play_button"
        style="@style/button"
        android:layout_margin="@dimen/margin"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <Button
        android:id="@+id/previous_button"
        style="@style/button"
        android:text="@string/previous"
        app:layout_constraintBaseline_toBaselineOf="@+id/pause_button"
        app:layout_constraintEnd_toStartOf="@+id/pause_button" />

    <Button
        android:id="@+id/pause_button"
        style="@style/button"
        android:text="@string/pause"
        app:layout_constraintEnd_toEndOf="@+id/play_button"
        app:layout_constraintStart_toStartOf="@+id/play_button"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <Button
        android:id="@+id/next_button"
        style="@style/button"
        android:text="@string/next"
        app:layout_constraintBaseline_toBaselineOf="@+id/pause_button"
        app:layout_constraintStart_toEndOf="@+id/pause_button" />

    <Button
        android:id="@+id/playlist_button"
        style="@style/button"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:text="@string/playlists"
        app:layout_constraintBaseline_toBaselineOf="@+id/option_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/option_button"
        style="@style/button"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/option"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/now_playing_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginRight="@dimen/margin16"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/song"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/now_playing_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginRight="@dimen/margin16"
        android:text="@string/artist"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/now_playing_song"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>